# falcon

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  dev.json  log4rsf.yaml  url.txt
src/: main.rs
templates/errors/: 404.html.tera
